--- a/src/saved.html
+++ b/src/saved.html
@@ -7,25 +7,24 @@
   <meta name="author" content="Alina Aprel">
   <title>NewsExplorer</title>
   <link rel="icon" type="image/png" href="../images/favicon.svg">
-	<link rel="stylesheet" href="../vendor/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css %>">
 </head>
 
 <body>
-  <header class="header">
-    <p class="header__explorer">NewsExplorer</p>
+  <header class="header header__theme_dark">
+    <p class="header__explorer header__theme-text_dark">NewsExplorer</p>
       <nav class="header__nav">
-            <a class="header__main header__main_active" href="#">Главная</a>
+            <a class="header__main header__theme-text_dark" href="index.html">Главная</a>
             <!-- Чтобы скрыть поле "Сохраненные статьи" - поставьте класс disabled -->
-            <p class="header__saved">Сохранённые статьи</p>
+            <a class="header__saved header__active_dark header__theme-text_dark">Сохранённые статьи</a>
             <!-- Чтобы скрыть поле "Авторизоваться" - поставьте класс disabled -->
-          <div class="header__rectangle">
+          <div class="header__rectangle header__theme-text_dark disabled">
             <a class="header__autorization" href="#">Авторизоваться</a>
           </div>
           <!-- Чтобы скрыть поле "Грета" - поставьте класс disabled -->
-          <div class="header__greta disabled">
-            <a class="header__greta-link">Грета</a>
-              <img class="header__greta-img" alt="Вход" src="../images/logout.svg">
+          <div class="header__greta_dark">
+            <a class="header__greta-link header__theme-text_dark">Грета</a>
+              <img class="header__greta-img_dark" alt="Вход" src="../images/greta-dark.svg">
           </div>
       </nav>
   </header>
@@ -40,36 +39,90 @@
   </container>
 
   <container class="saved-cards">
-    <div class="saved-cards__container">
-      <img class="saved-cards__image" alt="Цветок" src="../images/flower-one.png">
-      <p class="saved-cards__time">2 августа, 2019</p>
-      <h2 class="saved-cards__header">Национальное достояние – парки</h2>
-      <p class="saved-cards__text">В 2016 году Америка отмечала важный юбилей:
-        сто лет назад здесь начала складываться система национальных парков –
-       охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-      <p class="saved-cards__author">Дзен</p>
-    </div>
+    <div class="saved-cards__list">
+      <div class="saved-cards__container">
+          <button class="saved-cards__theme">Природа</button>
+          <button class="saved-cards__delete">
+            <img class="saved-cards__delete-img" alt="Корзина" src="../images/trash.svg">
+          </button>
+        <img class="saved-cards__image" alt="Цветок" src="../images/flower-one.png">
+        <p class="saved-cards__time">2 августа, 2019</p>
+        <h2 class="saved-cards__header">Национальное достояние – парки</h2>
+        <p class="saved-cards__text">В 2016 году Америка отмечала важный юбилей:
+          сто лет назад здесь начала складываться система национальных парков –
+        охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+        <p class="saved-cards__author">Дзен</p>
+      </div>
 
-    <div class="saved-cards__container">
-      <img class="saved-cards__image" alt="Цветок" src="../images/flower-one.png">
-      <p class="saved-cards__time">2 августа, 2019</p>
-      <h2 class="saved-cards__header">Национальное достояние – парки</h2>
-      <p class="saved-cards__text">В 2016 году Америка отмечала важный юбилей:
-        сто лет назад здесь начала складываться система национальных парков –
-       охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-      <p class="saved-cards__author">Дзен</p>
-    </div>
+      <div class="saved-cards__container">
+          <button class="saved-cards__theme">Природа</button>
+        <img class="saved-cards__image" alt="Цветок" src="../images/way.png">
+        <button class="saved-cards__statement">Убрать из сохранённых</button>
+        <button class="saved-cards__delete">
+          <img class="saved-cards__delete-img" alt="Корзина" src="../images/trash-dark.svg">
+        </button>
+        <p class="saved-cards__time">2 августа, 2019</p>
+        <h3 class="saved-cards__header">Лесные огоньки: история одной фотографии</h2>
+        <p class="saved-cards__text">Фотограф отвлеклась от освещения суровой политической
+           реальности Мексики, чтобы запечатлеть ускользающую красоту одного
+          из местных чудес природы.</p>
+        <p class="saved-cards__author">Афиша</p>
+      </div>
 
-    <div class="saved-cards__container">
-      <img class="saved-cards__image" alt="Цветок" src="../images/flower-one.png">
-      <p class="saved-cards__time">2 августа, 2019</p>
-      <h2 class="saved-cards__header">Национальное достояние – парки</h2>
-      <p class="saved-cards__text">В 2016 году Америка отмечала важный юбилей:
-        сто лет назад здесь начала складываться система национальных парков –
-       охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-      <p class="saved-cards__author">Дзен</p>
+      <div class="saved-cards__container">
+          <button class="saved-cards__theme">Тайга</button>
+        <img class="saved-cards__image" alt="Цветок" src="../images/flower-second.png">
+        <button class="saved-cards__delete">
+          <img class="saved-cards__delete-img" alt="Корзина" src="../images/trash.svg">
+        </button>
+        <p class="saved-cards__time">2 августа, 2019</p>
+        <h2 class="saved-cards__header">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
+        <p class="saved-cards__text">Знаменитый фотограф снимает первозданные леса России, чтобы
+           рассказать о необходимости их сохранения. В этот раз он отправился
+            в Двинско-Пинежскую тайгу, где...</p>
+        <p class="saved-cards__author">Медиазона</p>
+      </div>
+
+      <div class="saved-cards__container">
+          <button class="saved-cards__theme">Парки</button>
+        <img class="saved-cards__image" alt="Цветок" src="../images/flower-one.png">
+        <button class="saved-cards__delete">
+          <img class="saved-cards__delete-img" alt="Корзина" src="../images/trash.svg">
+        </button>
+        <p class="saved-cards__time">2 августа, 2019</p>
+        <h2 class="saved-cards__header">Национальное достояние – парки</h2>
+        <p class="saved-cards__text">В 2016 году Америка отмечала важный юбилей:
+          сто лет назад здесь начала складываться система национальных парков –
+        охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+        <p class="saved-cards__author">Дзен</p>
+      </div>
+
+      <div class="saved-cards__container">
+          <button class="saved-cards__theme">Фотография</button>
+        <img class="saved-cards__image" alt="Цветок" src="../images/way.png">
+        <button class="saved-cards__delete">
+          <img class="saved-cards__delete-img" alt="Корзина" src="../images/trash.svg">
+        </button>
+        <p class="saved-cards__time">2 августа, 2019</p>
+        <h3 class="saved-cards__header">Лесные огоньки: история одной фотографии</h2>
+        <p class="saved-cards__text">Фотограф отвлеклась от освещения суровой политической
+           реальности Мексики, чтобы запечатлеть ускользающую красоту одного
+          из местных чудес природы.</p>
+        <p class="saved-cards__author">Афиша</p>
+      </div>
     </div>
   </container>
 
+  <footer class="footer">
+    <p class="footer__text">© 2020 Supersite, Powered by News API</p>
+      <a class="footer__main">Главная</a>
+        <a class="footer__yandex">Яндекс.Практикум</a>
+          <a class="footer__github">
+            <img class="footer__github-image" alt="Github" src="../images/github.svg">
+          </a>
+        <a class="footer__facebook">
+          <img class="footer__facebook-image" alt="Facebook" src="../images/facebook.svg">
+        </a>
+  </footer>
 
 </body>
