--- a/src/saved.html
+++ b/src/saved.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Alina Aprel">
   <title>NewsExplorer</title>
   <link rel="icon" type="image/png" href="../images/favicon.svg">
-  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css %>">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
