--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Alina Aprel">
   <title>NewsExplorer</title>
   <link rel="icon" type="image/png" href="../images/favicon.svg">
-  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css %>">
+  <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
   <!-- Для того, чтобы скрыть какое-либо поле меню - нужно поставить класс disabled -->
